Version 1.2
-------------
	Release date: pending
	
	Bug Fixes
		
		- Replaced deprecated function in the credit card helper and missing HTML tags in the main header view 
		
	Features
		
		- Added language support and extended internationalization capabilities
		- Added support for BrainTree and BeanStream payment gateways
		
	Other
		
		- Updated to CodeIgniter 2.1

Version 1.1.4
-------------
	Release date: November 8, 2011
	
	Bug Fixes
		
		- Added missing state from Mexico per Oliver (thanks!).
		- Updated TinyMCE to support some foreign characters.
		- Updated URL to TinyMCE init file (was causing TinyMCE to not display due to JS error)
		- Updated rtrim to index.php for better support on windows.

Version 1.1.3
-------------
	Release date: Nov 8, 2011
	
	Bug Fixes
	
		- This is the same bug fix from 1.1.1 for SSL. It wasn't properly fixed in 1.1.1

Version 1.1.2
-------------
	Release date: Nov 7, 2011
	
	Bug Fixes
		
		- Fixed a bug in the order_model related to quantity and item reporting.

Version 1.1.1
-------------
	Release date: Nov 7, 2011
	
	Bug Fixes
		
		- Fixed a bug in MY_url_helper that caused Force_SSL to Force SSL even if SSL isn't enabled.
		- Fixed a MySQL strict mode bug where administrators do not have a default first and last name.
		- Fixed a MySQL Strict Mode bug where UserData is not given a value.
		
Version 1.1
------------
	Release date: Nov 5, 2011
	
	Bug Fixes
		
		- Group percentage discounts were reversed.
		- Coupons applied to individual items with percentage discounts were reversed.
		- XML Order export was broken.
		- XML Customer export was broken.
		- Admin order notification system was broken.
		- Location management was missing delete functions for Zones and Zone Areas.
		- Order date search cut off the last date.
		- Installation script added extra characters to the canned message for Gift Cards.
		- Fixed a minor bug with HTML code being displayed in a forgot password email.
	
	Features
	