@@ -13,6 +13,7 @@ class Paypal_express
 		$this->CI->load->library('session');
 		$this->CI->load->library('paypal');
 		$this->CI->load->library('httprequest');
+		$this->CI->lang->load('paypal_express');
 	}
 	
 	/*
@@ -33,14 +34,10 @@ class Paypal_express
 		{
 			$form['name']	= $this->method_name;
 			
-			//retrieve form contents
-			ob_start();
-			include(APPPATH."packages/payment/paypal_express/libraries/forms/checkout.php");
-			$form['form'] = ob_get_contents();
-			ob_end_clean(); 
+			return $this->CI->load->view('checkout', array(), true);
+			
 		} else return array();
 		
-		return $form;
 	}
 	
 	
@@ -59,16 +56,18 @@ class Paypal_express
 	function install()
 	{
 		
-		$config['username'] = "Paypal username";
-		$config['password'] = "Paypal password"; 
-		$config['signature'] = "Paypal API signature";
-		$config['currency'] = "USD";
+		$config['username'] = '';
+		$config['password'] = '';; 
+		$config['signature'] = '';
+		$config['currency'] = 'USD'; // default
 		
-		$config['return_url'] = "pp_gate/pp_return/";
-		$config['cancel_url'] = "pp_gate/pp_cancel/";
 		$config['SANDBOX'] = true;
 		
 		$config['enabled'] = "0";
+		
+		//not normally user configurable
+		$config['return_url'] = "pp_gate/pp_return/";
+		$config['cancel_url'] = "pp_gate/pp_cancel/";
 
 		$this->CI->Settings_model->save_settings('paypal_express', $config);
 	}
@@ -89,7 +88,7 @@ class Paypal_express
 		$this->CI->paypal->doExpressCheckout($this->CI->go_cart->total(), $store.' order');
 				
 		// If we get to this step at all, something went wrong	
-		return 'There was an error processing your payment through PayPal';
+		return lang('paypal_error');
 			
 	}
 	
@@ -100,20 +99,13 @@ class Paypal_express
 		if(!$post)
 		{
 			$settings	= $this->CI->Settings_model->get_settings('paypal_express');
-			$enabled	= $settings['enabled'];
 		}
 		else
 		{
 			$settings = $post;
-			$enabled	= $settings['enabled'];
 		}
 		//retrieve form contents
-		ob_start();
-		include(APPPATH."packages/payment/paypal_express/libraries/forms/admin_form.php");
-		$form = ob_get_contents();
-		ob_end_clean(); 
-		
-		return $form;
+		return $this->CI->load->view('admin_form', array('settings'=>$settings), true);
 	}
 	
 	function check()
@@ -138,3 +130,4 @@ class Paypal_express
 		}
 	}
 }
+
